# minisat

./: CMakeLists.txt
cmake/: config.cmake.in
